--- a/Makefile.in
+++ b/Makefile.in
@@ -19,6 +19,9 @@ CXXFLAGS += -I$(LIBEV)
 # Add Boost to CXXFLAGS.
 CXXFLAGS += -I$(BOOST)
 
+# Add -fPIC to CXXFLAGS.
+CXXFLAGS += -fPIC
+
 # Add dependency tracking to CXXFLAGS.
 CXXFLAGS += -MMD -MP
 
