Getting swig stuff to build correctly (also allowing someone to build in separate build directory).

--- a/swig/Makefile.in
+++ b/swig/Makefile.in
@@ -6,17 +6,13 @@ CXX = @CXX@
 
 CXXFLAGS = @CXXFLAGS@
 
-LIBEV = @abs_srcdir@/../third_party/libev-3.8
-
 PYTHON_HEADERS = /usr/include/python2.5
 
+# Add Python headers to include path.
 CXXFLAGS += -I$(PYTHON_HEADERS)
 
-# Add all the include directories needed by libprocess.
-INCLUDES = -I.. @CPPFLAGS@
-
-# Add directory for libprocess.
-CXXFLAGS += -I..
+# Add libprocess headers to include path.
+CXXFLAGS += -I@abs_srcdir@/..
 
 # Compile with -fPIC
 CXXFLAGS += -fPIC
@@ -24,22 +20,25 @@ CXXFLAGS += -fPIC
 # Add directory for libprocess.
 LDFLAGS += -L.. @LDFLAGS@
 
+LIBEV = ../third_party/libev-3.8
+
 # Add libev (as static) and libprocess to LIBS.
-LIBS += -lprocess -lev
+LIBS += $(LIBEV)/.libs/ev.o $(LIBEV)/.libs/event.o -lprocess
 
 default: all
 
 swig: process.i
 	swig -c++ -python -threads -I.. -o python/process.cpp -outdir python process.i
 
-python/_process.so: python/process.cpp python/process.h
-	$(CXX) $(CXXFLAGS) -shared -o $@ python/process.cpp $(LDFLAGS) $(LIBS)
+python/_process.so: @abs_srcdir@/python/process.cpp @abs_srcdir@/python/process.h
+	@if [ ! -d python ]; then mkdir python; fi
+	$(CXX) $(CXXFLAGS) -shared -o $@ @abs_srcdir@/python/process.cpp $(LDFLAGS) $(LIBS)
 
 python: python/_process.so
 
 all: python
 
 clean:
-	rm -rf python/_process.so
+	rm -f python/_process.so
 
 .PHONY: default python all clean
