--- a/swig/Makefile.in
+++ b/swig/Makefile.in
@@ -6,11 +6,6 @@ CXX = @CXX@
 
 CXXFLAGS = @CXXFLAGS@
 
-PYTHON_HEADERS = /usr/include/python2.5
-
-# Add Python headers to include path.
-CXXFLAGS += -I$(PYTHON_HEADERS)
-
 # Add libprocess headers to include path.
 CXXFLAGS += -I@abs_srcdir@/..
 
@@ -25,20 +20,32 @@ LIBEV = ../third_party/libev-3.8
 # Add libev (as static) and libprocess to LIBS.
 LIBS += $(LIBEV)/.libs/ev.o $(LIBEV)/.libs/event.o -lprocess
 
+PYTHON_HEADERS = /usr/include/python2.5
+
+RUBY_HEADERS = /usr/lib/ruby/1.8/x86_64-linux
+
 default: all
 
-swig: process.i
-	swig -c++ -python -threads -I.. -o python/process.cpp -outdir python process.i
+swig: python/process.i ruby/process.i
+#	swig -c++ -python -threads -I.. -o python/process.cpp -outdir python python/process.i
+	swig -c++ -ruby -I.. -o ruby/process.cpp -outdir ruby -autorename ruby/process.i
 
 python/_process.so: @abs_srcdir@/python/process.cpp @abs_srcdir@/python/process.h
 	@if [ ! -d python ]; then mkdir python; fi
-	$(CXX) $(CXXFLAGS) -shared -o $@ @abs_srcdir@/python/process.cpp $(LDFLAGS) $(LIBS)
+	$(CXX) $(CXXFLAGS) -I$(PYTHON_HEADERS) -shared -o $@ @abs_srcdir@/python/process.cpp $(LDFLAGS) $(LIBS)
 
 python: python/_process.so
 
-all: python
+ruby/process.so: @abs_srcdir@/ruby/process.cpp @abs_srcdir@/ruby/process.h
+	@if [ ! -d ruby ]; then mkdir ruby; fi
+	$(CXX) $(CXXFLAGS) -I$(RUBY_HEADERS) -shared -o $@ @abs_srcdir@/ruby/process.cpp $(LDFLAGS) $(LIBS)
+
+ruby: ruby/process.so
+
+all: python ruby
 
 clean:
 	rm -f python/_process.so
+	rm -f ruby/process.so
 
-.PHONY: default python all clean
+.PHONY: default python ruby all clean
